# MFC

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  convert_to_mfc.sh
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  main.yml
build-aux/m4/: bitcoin_qt.m4
build_msvc/: bitcoin_config.h
ci/test/: 00_setup_env_native_multiprocess.sh  05_before_script.sh  06_script_a.sh  06_script_b.sh
contrib/: README.md  install_db4.sh
contrib/debian/: litecoin-qt.desktop
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  (+3 more)
doc/: README.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  reduce-traffic.md  release-notes-litecoin.md  release-process.md  tor.md  zmq.md
doc/man/: Makefile.am  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoin-wallet.1  litecoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsseeds.h  clientversion.cpp  init.cpp  netaddress.h  pow.cpp  txdb.cpp  validation.cpp
test/: README.md  get_previous_releases.py
(+194 files in other folders)
